EPMRPP-109234 remove index only if project is non-empty